# WebBrowser-FileManager

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  SQLite.md  editor.html  editor.js  handler.cpp  handler.h  helper.cpp  helper.h  httplib.cc  httplib.h  index.html  index.js  main.cpp  markdown.html  markdown.js  notes.db  notes.db-shm  notes.db-wal  notes.html  video.html  video.js
Front/notes/: Cargo.toml  utils.js
Front/notes/src/: lib.rs
Front/notes/src/utils/: date.rs  dom.rs  element.rs  format.rs  handler.rs  mod.rs  mutable.rs  notes.code-workspace  onclick.rs  strings.rs  style.rs  timer.rs  translate.rs  utils.rs
Front/static_ref_macro/: Cargo.toml
Front/video/: Cargo.toml
Front/video/src/: lib.rs
Front/video/src/utils/: click_handle.rs  dom.rs  mod.rs  onclick.rs
Front/videos/: Cargo.toml
Front/videos/src/utils/: mod.rs
assets/: markdown.html
assets/editor/: custom-actions.js  data.js  editor.html  editor.js  format.js  save_data.js
assets/index/: context_menu.js  data.js  delete_files.js  extract_zip.js  index.html  index.js  move_files.js  render.js  save_path.js  show_delete_dialog.js  utils.js
assets/markdown/: markdown.html  markdown.js
assets/notes/: notes.html
assets/video/: actions.js  video.css  video.html  videos.html
src/: main.rs
src/data/: notes.rs  snippet.rs  statistics.rs
src/handlers/: api_asset_file.rs  api_file.rs  api_file_delete.rs  api_file_new_dir.rs  api_file_new_file.rs  api_files.rs  asset.rs  auto_it.rs  compress_zip.rs  db.rs  editor.rs  extract_zip.rs  favicon.rs  file.rs  index.rs  mod.rs  not_found.rs  notes.rs  rust.rs  subtitle.rs  translate.rs  video.rs
src/headers/: mod.rs
src/models/: file_item.rs  mod.rs
src/seek_stream/: mod.rs  multipart.rs  seekstream.rs
src/utils/: get_file_list.rs  mod.rs
zipper/zipper/: CDirEntry.cpp  unzipper.cpp
代码段/: Rust.txt  配置.txt
