[package]
name = "Manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
local-ip-address = "0.5.1"
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["json"] }
tree_magic = "0.2"
range_header = "0.2"
rand = "0.8.5"
futures = "0.3.21"
urlencoding = "2.1.2"

[dependencies.serde]
version = "1.0"
features = ["derive"]
