[package]
edition = "2021"
name = "notes"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]


[dependencies]
convert_case = "0.6.0"
js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.95"
# https://docs.rs/url/2.3.1/url/
url = "2.3.1"
# https://docs.rs/urlencoding/2.1.2/urlencoding/
urlencoding = "2.1.2"
send_wrapper = { version = "0.6.0", default-features = false }
futures-channel = { version = "0.3.21", default-features = false }
futures-signals = { version = "0.3.32", default-features = false }
once_cell = "1.17.1"
static_ref_macro = { path = "../static_ref_macro", default-features = false, optional = true }


[dependencies.web-sys]
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    "Window",
    "Document",
    "HtmlElement",
    "Location",
    "Event",
    "KeyboardEvent",
    "HtmlTextAreaElement",
    "Navigator",
    "Storage"
]
version = "0.3.61"

[dependencies.regex]
default-features = false
version = "1.7.3"
# regex currently requires the standard library, you must re-enable it.
features = ["std"]

[features]
default = [
    "static_ref"
]
static_ref = ["static_ref_macro"]
