[package]
edition = "2021"
name = "video"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# convert_case = "0.6.0"
# js-sys = "0.3.61"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
# serde = { version = "1.0", features = ["derive"] }
# serde-wasm-bindgen = "0.4"
# https://docs.rs/url/2.3.1/url/
url = "2.3.1"
# https://docs.rs/urlencoding/2.1.2/urlencoding/
urlencoding = "2.1.2"

[dependencies.web-sys]
features = [
  "Window",
  "Document",
  "HtmlElement",
  "Location",
  "HtmlVideoElement",
  "Event",
  "MouseEvent",
  "SvgPathElement"
]
version = "0.3.61"

[dependencies.regex]
default-features = false
version = "1.7.3"
# regex currently requires the standard library, you must re-enable it.
features = ["std"]
